<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16sp"
        android:orientation="vertical"
        android:paddingStart="@dimen/parent_padding"
        android:paddingTop="8sp"
        android:paddingEnd="@dimen/parent_padding"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:paddingTop="@dimen/top_padding"
            android:text="@string/name"
            android:textSize="@dimen/nameSize" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:ems="10"
            android:hint="@string/enter_nickname"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/done"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/done" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/nameImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:contentDescription="@string/yellow_star"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/top_margin"
            android:paddingTop="@dimen/top_padding">

            <LinearLayout
                android:id="@+id/scroll_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/top_padding">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/scroll_image"
                    app:srcCompat="@android:drawable/ic_menu_compass" />

                <TextView
                    android:id="@+id/bio_text"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/bio_text"
                    android:textAlignment="textStart" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>